Minor tweaks to help reduce obstacle overhead for ellipse

--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -14,8 +14,8 @@ dlm ?= false
 
 constnu ?= false
 densitydiff ?= false
-#movingframe ?= true
-movingframe ?= false
+movingframe ?= true
+#movingframe ?= false
 rk2 ?= false
 
 CPPFLAGS+= -w
