--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -125,9 +125,10 @@ CUBISM_DIR = $(BUILDDIR)/../Cubism/
 OBJECTS = PoissonSolverScalarFFTW.o Sim_FSI_Gravity.o main.o #Profiler.o
 
 ifeq "$(smarties)" "true"
-CPPFLAGS += -DRL_MPI_CLIENT -I../../smarties/source/
+SMARTIESDIR ?= ../../smarties/source/
+CPPFLAGS += -DRL_MPI_CLIENT -I$(SMARTIESDIR)
 OBJECTS += Communicator.o
-VPATH := $(SRC_DIR) $(CUBISM_DIR) ../../smarties/source/
+VPATH := $(SRC_DIR) $(CUBISM_DIR) $(SMARTIESDIR) 
 else
 VPATH := $(SRC_DIR) $(CUBISM_DIR)
 endif
