--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -60,7 +60,7 @@ LIBS += -L../tools/fpzip/lib -lfpzip
 BUILDDIR = .
 SRC_DIR = $(BUILDDIR)/../source/
 CUBISM_DIR = $(BUILDDIR)/../Cubism/source/
-OBJECTS = Sim_FSI_Gravity.o Definitions.o
+OBJECTS = Sim_FSI_Gravity.o Definitions.o Shape.o ShapeLibrary.o ShapesSimple.o BlowFish.o Fish.o FishLibrary.o StefanFish.o
 
 VPATH := $(SRC_DIR):$(CUBISM_DIR)
 
