user uniform-pressure-poisson-solver if obstacles have same density as fluid. Also, reinstasted compute of penalization forces.

--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -57,7 +57,7 @@ endif
 BUILDDIR = .
 SRC_DIR = $(BUILDDIR)/../source/
 CUBISM_DIR = $(BUILDDIR)/../Cubism/source/
-OBJECTS = Sim_FSI_Gravity.o Definitions.o Shape.o ShapeLibrary.o ShapesSimple.o BlowFish.o Fish.o FishLibrary.o StefanFish.o
+OBJECTS = Simulation.o Definitions.o Shape.o ShapeLibrary.o ShapesSimple.o BlowFish.o Fish.o FishLibrary.o StefanFish.o
 
 VPATH := $(SRC_DIR):$(CUBISM_DIR)
 
