--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -53,7 +53,7 @@ NVFLAGS+= -code=sm_60 -arch=compute_60
 CPPFLAGS += -I../source/ -I../Cubism/source/
 NVFLAGS += -I../Cubism/source/
 
-ifneq "$(findstring fft, $(poisson))" ""
+#ifneq "$(findstring fft, $(poisson))" ""
 ifeq "$(precision)" "single"
     CPPFLAGS += -D_FLOAT_PRECISION_
     NVFLAGS += -D_FLOAT_PRECISION_
@@ -61,7 +61,7 @@ ifeq "$(precision)" "single"
 else
     LIBS += -lfftw3  -lfftw3_omp
 endif
-endif
+#endif
 
 BUILDDIR = .
 SRC_DIR = $(BUILDDIR)/../source/
@@ -71,7 +71,7 @@ CUBISM_DIR = $(BUILDDIR)/../Cubism/source/
 #OBJECTS = Simulation.o Definitions.o Shape.o ShapeLibrary.o ShapesSimple.o BlowFish.o Fish.o FishLibrary.o StefanFish.o BufferedLogger.o CarlingFish.o
 OBJECTS = Simulation.o SimulationData.o Shape.o ShapeLibrary.o ShapesSimple.o \
 BufferedLogger.o Helpers.o HYPRE_solver.o PressureIterator.o PutObjectsOnGrid.o \
-RKstep1.o RKstep2.o UpdateObjects.o presRHS_step1.o
+RKstep1.o RKstep2.o UpdateObjects.o presRHS_step1.o PoissonSolverScalar.o PoissonSolverScalarFFTW_freespace.o
 CPP_FILES = $(notdir $(OBJECTS:.o=.cpp))
 
 VPATH := $(DIRS) $(CUBISM_DIR)
