--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -69,9 +69,12 @@ DIRS = $(sort $(dir $(wildcard ../source/*/)))
 
 CUBISM_DIR = $(BUILDDIR)/../Cubism/source/
 #OBJECTS = Simulation.o Definitions.o Shape.o ShapeLibrary.o ShapesSimple.o BlowFish.o Fish.o FishLibrary.o StefanFish.o BufferedLogger.o CarlingFish.o
-OBJECTS = Simulation.o SimulationData.o Shape.o ShapeLibrary.o ShapesSimple.o \
-BufferedLogger.o Helpers.o HYPREdirichlet.o PressureIterator.o PutObjectsOnGrid.o \
-advDiff.o advDiff_RK.o UpdateObjects.o presRHS_step1.o PoissonSolver.o FFTW_freespace.o PressureSingle.o
+OBJECTS = \
+		Simulation.o SimulationData.o Shape.o ShapeLibrary.o ShapesSimple.o \
+		PressureSingle.o PressureIterator.o presRHS_step1.o PoissonSolver.o \
+		HYPREdirichlet.o FFTW_freespace.o PutObjectsOnGrid.o UpdateObjects.o \
+		advDiff.o advDiff_RK.o BufferedLogger.o Helpers.o
+
 CPP_FILES = $(notdir $(OBJECTS:.o=.cpp))
 
 VPATH := $(DIRS) $(CUBISM_DIR)
