new mixed variable density solver. very cool very legal very stable to stresstest

--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -66,7 +66,8 @@ OBJECTS = \
 		advDiff.o BufferedLogger.o Helpers.o BlowFish.o Fish.o SmartCylinder.o \
 		FishLibrary.o StefanFish.o CarlingFish.o PressureVarRho.o Penalization.o \
 		advDiffGrav.o Glider.o PressureIterator_approx.o ArgumentParser.o \
-		HYPREdirichletVarRho.o PressureVarRho_proper.o PressureIterator_unif.o
+		HYPREdirichletVarRho.o PressureVarRho_proper.o PressureIterator_unif.o \
+		UpdateObjectsStaggered.o advDiffGravStaggered.o PressureSingleStaggered.o
 
 
 ifneq "$(gpu)" "false"
