--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -61,14 +61,13 @@ DIRS = $(sort $(dir $(wildcard ../source/*/)))
 #advDiff_RK.o
 OBJECTS = \
 		Simulation.o SimulationData.o Shape.o ShapeLibrary.o ShapesSimple.o \
-		PressureSingle.o PressureIterator.o presRHS_step1.o PoissonSolver.o \
+		PressureSingle.o PoissonSolver.o PressureIterator_approx.o \
 		HYPREdirichlet.o FFTW_freespace.o PutObjectsOnGrid.o UpdateObjects.o \
 		advDiff.o BufferedLogger.o Helpers.o BlowFish.o Fish.o SmartCylinder.o \
-		FishLibrary.o StefanFish.o CarlingFish.o PressureVarRho.o Penalization.o \
-		advDiffGrav.o Glider.o PressureIterator_approx.o ArgumentParser.o \
-		HYPREdirichletVarRho.o PressureVarRho_proper.o PressureIterator_unif.o \
-		UpdateObjectsStaggered.o advDiffGravStaggered.o PressureSingleStaggered.o
-
+		FishLibrary.o StefanFish.o CarlingFish.o advDiffGravStaggered.o \
+		advDiffGrav.o Glider.o ArgumentParser.o PressureIterator_unif.o \
+		HYPREdirichletVarRho.o PressureVarRho_proper.o UpdateObjectsStaggered.o
+#Penalization.o PressureIterator.o  PressureVarRho.o PressureSingleStaggered.o
 
 ifneq "$(gpu)" "false"
 LIBS += -lcufft
